<resources>
    <string name="app_name">ManagementApp</string>
    <string name="title_home">Home</string>
    <string name="title_notice">Notices</string>
    <string name="title_location">Location</string>
    <string name="logout_button">Logout</string>
    <string name="login_button">Login</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="content_desc1">MRGS Logo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="to_do">To Do</string>
    <string name="add_item">+</string>
    <string name="enter_todo">Enter new item</string>
</resources>