<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lojanan.management.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notice"
        android:name="com.lojanan.management.ui.notice.NoticeFragment"
        android:label="@string/title_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.lojanan.management.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />
    <activity
        android:id="@+id/toDoActivity"
        android:name="com.lojanan.management.ToDoActivity"
        android:label="activity_to_do"
        tools:layout="@layout/activity_to_do" />
</navigation>